# Tulpar-Cli

./: Developer Log.md  README.md  pyproject.toml
tests/: test_manage.py
tulpar_cli/: app.py  generate.py  manage.py  new.py  utils.py
tulpar_cli/templates/: app.py.jinja  base.html  config.py.jinja  hook.py.jinja  middleware.py.jinja  model.py.jinja  page.py.jinja  pyproject.toml.jinja  resource.py.jinja
