[tool.poetry]
name = "tulpar-cli"
version = "0.0.1"
description = "Tulpar Cli Tool"
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]
license = "MIT"

[tool.poetry.scripts]
tulpar = "tulpar_cli.app:tulpar"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
rich = "^12.2.0"
Jinja2 = "^3.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.4"
bandit = "^1.7.4"
radon = "^5.1.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest-mock = "^3.7.0"
coverage = "^6.3.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
